@@ -108,7 +108,6 @@ class db_diskimage extends db_file
 	static function handles($file)
 	{
 		$file = str_replace('\\', '/', $file);
-		
 		if(USE_ALIAS == true) $file = preg_replace($GLOBALS['alias_regexp'], $GLOBALS['paths'], $file);
 		
 		// parse through the file path and try to find a zip
